--- a/A1/frontend/package.json
+++ b/A1/frontend/package.json
@@ -6,21 +6,28 @@
     "@material/textfield": "^14.0.0",
     "@mui/joy": "^5.0.0-alpha.38",
     "@mui/material": "^5.9.3",
+    "@mui/x-data-grid": "^5.15.2",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "kanban-board-from-react-trello": "^1.0.0",
+    "moment": "^2.29.4",
     "mui": "^0.0.1",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
+    "react-collapsed": "^3.3.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-password-checklist": "^1.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-sidebar": "^3.0.2",
     "react-toastify": "^9.0.7",
+    "react-trello": "^2.2.11",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
