--- a/A1/frontend/package.json
+++ b/A1/frontend/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@material/textfield": "^14.0.0",
+    "@mui/icons-material": "^5.8.4",
     "@mui/joy": "^5.0.0-alpha.38",
-    "@mui/material": "^5.9.3",
+    "@mui/material": "^5.10.1",
     "@mui/x-data-grid": "^5.15.2",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@testing-library/jest-dom": "^5.16.4",
